--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "scripts": {
-    "build": "rollup --config"
+    "build": "npx webpack --config webpack.config.js --display-error-details"
   },
   "devDependencies": {
     "@babel/core": "^7.10.2",
-    "@rollup/plugin-babel": "^5.0.3",
-    "rollup": "^2.14.0"
+    "@babel/preset-env": "^7.10.2",
+    "babel-loader": "^8.1.0",
+    "css-loader": "^3.5.3",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11"
   }
 }
