--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
     "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
+  },
+  "dependencies": {
+    "react": "^16.13.1"
   }
 }
