--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "css-loader": "^3.5.3",
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.3.0",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
     "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
   },
   "dependencies": {
+    "excellentexport": "2.1.0",
     "moment": "^2.26.0",
+    "npm": "^6.14.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   }
