--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   },
   "dependencies": {
     "excellentexport": "2.1.0",
+    "lodash": "^4.17.15",
     "moment": "^2.26.0",
     "npm": "^6.14.5",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-flip-move": "^3.0.4"
   }
 }
